add note for ious

--- a/yolox/tracker/test_diou.ipynb
+++ b/yolox/tracker/test_diou.ipynb
@@ -113,6 +113,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note:\n",
+    "Because the bbox_ious function that the original ious are using treats coordinates inclusively (counting both the start and end pixels), it calculates areas differently than the straightforward mathematical IoU, resulting in approximately 0.36 instead of 0.25.\n",
+    "\n",
+    "For this example, it should be 4/16 = 0.25\n",
+    "However with inclusive pixels, it becomes 9/25 = 0.36"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
