add pint statement

--- a/yolox/tracker/test_diou.ipynb
+++ b/yolox/tracker/test_diou.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,17 +61,19 @@
     "\n",
     "            print(\"dig_dis:\", enclosing_diag)\n",
     "\n",
+    "            print(\"c/p:\", (center_dist ** 2) / (enclosing_diag ** 2))\n",
+    "\n",
     "            if enclosing_diag > 0: \n",
     "                dious[i, j] = _ious[i, j] - (center_dist ** 2) / (enclosing_diag ** 2)\n",
     "            else:\n",
     "                dious[i, j] = _ious[i, j]\n",
-    "    \n",
+    "    print(\"this is dious\", dious)\n",
     "    return dious "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +86,9 @@
       "center_dist: 1.4142135623730951\n",
       "dig_min: [0. 0.]\n",
       "dig_max [4. 4.]\n",
-      "dig_dis: 5.656854249492381\n"
+      "dig_dis: 5.656854249492381\n",
+      "c/p: 0.0625\n",
+      "this is dious [[0.2975]]\n"
      ]
     }
    ],
@@ -125,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +152,9 @@
       "center_dist: 1.4142135623730951\n",
       "dig_min: [0. 0.]\n",
       "dig_max [4. 4.]\n",
-      "dig_dis: 5.656854249492381\n"
+      "dig_dis: 5.656854249492381\n",
+      "c/p: 0.0625\n",
+      "this is dious [[0.2975]]\n"
      ]
     }
    ],
