--- a/data.ipynb
+++ b/data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,18 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/users/rwang257/.conda/envs/transferlearning/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/users/yjing17/.local/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Downloading ./tracking/train.zip...: : 9.58GiB [07:20, 21.7MiB/s]                           \n",
-      "Downloading ./tracking/test.zip...: : 8.71GiB [07:17, 19.9MiB/s]                           \n",
-      "Downloading ./tracking/challenge.zip...: : 11.0GiB [09:02, 20.3MiB/s]                           \n"
+      "Downloading ./tracking/train.zip...: : 9.58GiB [09:52, 16.2MiB/s]                           \n",
+      "Downloading ./tracking/test.zip...: : 8.71GiB [09:13, 15.7MiB/s]                           \n",
+      "Downloading ./tracking/challenge.zip...: : 11.0GiB [11:50, 15.5MiB/s]                           \n"
      ]
     }
    ],
@@ -41,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "unzip -q tracking/train.zip -d ./dataset/images\n",
-    "unzip -q tracking/test.zip -d ./dataset/images\n",
-    "unzip -q tracking/challenge.zip -d ./dataset/images"
+    "unzip -q tracking/train.zip -d ./Dataset/tracking\n",
+    "unzip -q tracking/test.zip -d ./Dataset/tracking\n",
+    "unzip -q tracking/challenge.zip -d ./Dataset/tracking"
    ]
   },
   {
@@ -676,7 +676,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "transferlearning",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -690,7 +690,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
